Updated project/solution files for VS2010.

--- a/INetGet_VC100.vcxproj.filters
+++ b/INetGet_VC100.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClCompile Include="src\Slunk.cpp">
       <Filter>Source Files\Utilities</Filter>
     </ClCompile>
+    <ClCompile Include="src\Sync.cpp">
+      <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Thread.cpp">
+      <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Params.h">
@@ -129,6 +135,15 @@
       <Filter>Header Files\Client</Filter>
     </ClInclude>
     <ClInclude Include="src\Slunk.h">
+      <Filter>Header Files\Utilties</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Sync.h">
+      <Filter>Header Files\Utilties</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Compat.h">
+      <Filter>Header Files\Utilties</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Thread.h">
       <Filter>Header Files\Utilties</Filter>
     </ClInclude>
   </ItemGroup>
